@@ -1,0 +1,9 @@
+Title: Latest Additions
+
+----
+
+Description: A reverse chronological list of recent terms and sources added to the glossary.
+
+----
+
+Text:
