@@ -1,5 +1,4 @@
 <?php
-
 	return function($site, $pages, $page) {
 		$query   = get('q');
 		$results = $site->search($query, 'title');
