@@ -23,6 +23,7 @@ Sources: _$s
 + Added new terms
 + Added new sources
 + Updated and expanded dozens of existing entries
++ Added page listing the [latest additions](/latest) to the glossary
 + Legacy domain links now redirect to [newtonglossary.com](http://newtonglossary.com/)
 + Implemented [Kirby GA](https://github.com/jenstornell/kirby-ga) plugin for [Google Analytics](https://www.google.com/analytics/) integration
 + Implemented [Kirby XML Sitemap](https://github.com/pedroborges/kirby-xml-sitemap) plugin
